src/auryn/tests/snapshots/auryn__auryn__tests__ui@assignment_type_mismatch.au.snap
---
source: src/auryn/tests/mod.rs
expression: "fn main() {\n\tlet a: I32 = print(\"Hello\")\n}\n"
input_file: src/auryn/tests/inputs/ui/assignment_type_mismatch.au
---
Error: Type mismatch
   ╭─[ main:2:15 ]
   │
 2 │     let a: I32 = print("Hello")
   │                  ───────┬──────  
   │                         ╰──────── Expected `I32`, but got `()`
───╯
