src/auryn/tests/snapshots/auryn__auryn__tests__ui@recover_call.au.snap
---
source: src/auryn/tests/mod.rs
expression: "fn main() {\n    let a = 1\n    bar(a., 2)\n}\n\nfn bar(a: I32, b: I32) {\n    print(a)\n    print(b)\n}\n"
input_file: src/auryn/tests/inputs/ui/recover_call.au
---
Error: Unexpected token
   ╭─[ main:3:11 ]
   │
 3 │     bar(a., 2)
   │           │ 
   │           ╰─ got ","
   │ 
   │ Note: Expected `<identifier>`
───╯

Error: Mismatched argument count
   ╭─[ main:3:5 ]
   │
 6 │ fn bar(a: I32, b: I32) {
   │       ────────┬────────  
   │               ╰────────── Due to the definition here
   │
   ├─[ main:3:5 ]
   │
 3 │     bar(a., 2)
   │     ─┬─  
   │      ╰─── Expected 2 arguments, but got 1
───╯
